--- a/examples/views/index.jade
+++ b/examples/views/index.jade
@@ -45,14 +45,14 @@ html(lang="en")
                   td
                     #{ver.categoryCount}
                   td 
-                    - if (var.date)
+                    - if (ver.date)
                       #{ver.date}
                   td 
-                    - if (var.title)
+                    - if (ver.title)
                       #{ver.title}
                   td 
-                    - if (var.subtitle)
+                    - if (ver.subtitle)
                       #{ver.subtitle}
                   td
-                    - if (var.message) 
+                    - if (ver.message) 
                       #{ver.message}         
