Jade is the worst

--- a/examples/views/index.jade
+++ b/examples/views/index.jade
@@ -15,14 +15,18 @@ html(lang="en")
               td #{notification.event}
               td #{notification.category}
               td #{notification.categoryCount}
-              td - if (notifications.date)
-                #{notification.date}
-              td - if (notifications.title)
-                #{notification.title}
-              td - if (notifications.subtitle)
-                #{notification.subtitle}
-              td - if (notifications.message)
-                #{notification.message}
+              td 
+                - if (notifications.date)
+                  |  #{notification.date}
+              td 
+                - if (notifications.title)
+                  |  #{notification.title}
+              td 
+                - if (notifications.subtitle)
+                  |  #{notification.subtitle}
+              td 
+                - if (notifications.message)
+                  |  #{notification.message}
             - if (notifications.versions)
               each ver, j in notifications.versions
                 tr
@@ -31,11 +35,15 @@ html(lang="en")
                   td #{ver.event}
                   td #{ver.category}
                   td #{ver.categoryCount}
-                  td - if (ver.date)
-                    #{ver.date}
-                  td - if (ver.title)
-                    #{ver.title}
-                  td - if (ver.subtitle)
-                    #{ver.subtitle}
-                  td - if (ver.message) 
-                    #{ver.message}         
+                  td 
+                    - if (ver.date)
+                      |  #{ver.date}
+                  td 
+                    - if (ver.title)
+                      |  #{ver.title}
+                  td 
+                    - if (ver.subtitle)
+                      |  #{ver.subtitle}
+                  td 
+                    - if (ver.message) 
+                      |  #{ver.message}         
