--- a/examples/views/index.jade
+++ b/examples/views/index.jade
@@ -8,6 +8,13 @@ html(lang="en")
       table
         thead
           tr: th Notifications
+            td Event ID
+            td Category
+            td Count
+            td Date
+            td Title
+            td Subtitle
+            td Message
         tbody
           each notification, i in notifications
             tr
@@ -15,18 +22,10 @@ html(lang="en")
               td #{notification.event}
               td #{notification.category}
               td #{notification.categoryCount}
-              td 
-                - if (notifications.date)
-                  |  #{notification.date}
-              td 
-                - if (notifications.title)
-                  |  #{notification.title}
-              td 
-                - if (notifications.subtitle)
-                  |  #{notification.subtitle}
-              td 
-                - if (notifications.message)
-                  |  #{notification.message}
+              td #{notification.date}
+              td #{notification.title}
+              td #{notification.subtitle}
+              td #{notification.message}
             - if (notifications.versions)
               each ver, j in notifications.versions
                 tr
@@ -35,15 +34,7 @@ html(lang="en")
                   td #{ver.event}
                   td #{ver.category}
                   td #{ver.categoryCount}
-                  td 
-                    - if (ver.date)
-                      |  #{ver.date}
-                  td 
-                    - if (ver.title)
-                      |  #{ver.title}
-                  td 
-                    - if (ver.subtitle)
-                      |  #{ver.subtitle}
-                  td 
-                    - if (ver.message) 
-                      |  #{ver.message}         
+                  td #{ver.date}
+                  td #{ver.title}
+                  td #{ver.subtitle}
+                  td #{ver.message}         
